--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     text-decoration: none;
+    font-family: 'Poppin', sans-serif;
 }
 
 header {
@@ -33,4 +34,46 @@ header {
     list-style-type: none;
     display: flex;
     font-weight: lighter;
+}
+.head {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 7vh;
+    align-items: center;
+}
+.logo {
+    width: 20vw;
+}
+.head h3 {
+    font-size: 2.1rem;
+    font-weight: 400;
+    color: whitesmoke;
+}
+.search {
+    display: flex;
+    width: 55vw;
+    align-items: center;
+    border-radius: 10px;
+    background: white;
+    padding: 5px 4px;
+}
+.search .search-item {
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+}
+.search .search-item p {
+    color: red;
+    border-right: 1px solid grey;
+    font-size: 15px;
+    margin-right: 8px;
+    margin-left: 10px;
+}
+.search .search-item input {
+    outline: none;
+    border: none;
+    width: 200%;
+    padding-left: 10px;
+    font-size: 15px;
 }
