--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ body {
     font-family: 'Poppin', sans-serif;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
 header {
     width: 100%;
     height: 70vh;
@@ -64,11 +69,11 @@ header {
     margin-left: 10px;
 }
 .search .search-item p {
-    color: red;
+    color: grey;
     border-right: 1px solid grey;
     font-size: 15px;
-    margin-right: 8px;
-    margin-left: 10px;
+    margin-right: 10px;
+    margin: 10px;
 }
 .search .search-item input {
     outline: none;
@@ -76,4 +81,12 @@ header {
     width: 200%;
     padding-left: 10px;
     font-size: 15px;
+}
+.search .search-item:first-child {
+    width: 30%;
+    color: palevioletred;
+}
+.search .search-item:last-child {
+    width: 70%;
+    color: grey;
 }
