--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
 
 a {
     text-decoration: none;
-    color: white;
 }
 
 
@@ -118,55 +117,41 @@ li {
     color: grey;
 }
 /* SECTION 1 */
-.section-1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 4rem;
-}
-.section-1 .section-1-item {
-    position: relative;
-    width: 15rem;
-    margin: 3px 5px;
-    overflow: hidden;
-    border-radius: 10px;
-    background: white;
-    border: 1px solid rgb(243, 237, 237);
 
-}
-.section-1 .section-1-item img {
-    width: 100%;
-    border: 1px solid rgb(243, 237, 237);
-    border-radius: 10px;
-    z-index: -1;
-}
-.section-1 .section-1-item .items-details {
-    position: absolute;
-    bottom: 3px;
-    align-items: center;
-    border-radius: 0 0 10px 10px;
-    background-color: white;
-    width: 100%;
-    height: 25%;
-    z-index: 2;
-}
-.section-1 .section-1-item .items-details p {
-    text-align: center;
-}
+
 /* SECTION 2 */
-.section-2  {
-    width: 1000px;
-    margin: 0 auto;
-    margin-bottom: 4rem;
+
+.section-2 {
+    padding: 10px 200px;
+    display: flex;
+    flex-direction: column;
+    width: 560vw;
 }
-.section-2-heading {
-    font-size: 2rem;
-    line-height: 1.2;
+.section-2-heading h2 {
+    font-size: 3.2rem;
     font-weight: 400;
-}
-.section-2-container {
+    line-height: 1.2;
     
 }
-.places-link {
-    text-decoration: default;
+.section-2-heading h2 span {
+    font-weight: 600;
+}
+
+.section-2-container {
+    display: grid;
+    grid-template-columns: repeat(3, 100%);
+    width: 300px;
+}
+
+.section-2-items {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid grey;
+    border-radius: 10px;
+    margin: 10px 12px;
+    height: 4rem;
+    padding: 10px 15px;
+    box-shadow: ;
+
 }
